[metadata]
name = cltools
version = 2023.1
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = angular power spectrum tools metapackage
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/cltools
project_urls =
    Documentation = https://cltools.readthedocs.io/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    # cltools
    convolvecl==2022.5.10
    interpcl==2021.5.20
    gaussiancl==2023.1
    sortcl==2021.10.11
    transformcl==2022.8.9
    regularizecl==2022.3.16

[options.extras_require]
all=
    # auxiliary packages
    flt==2022.7.27
docs =
    # docs
    numpydoc
